--- a/index.html
+++ b/index.html
@@ -14,41 +14,37 @@
   </header>
   <main>
     <article class="preview-card">
-      <article class="preview-card-travel">
-        <img src="https://picsum.photos/401" alt="photo with heart drawn into a beach">
-        <div class="date-author">
-          <p>Veröffentlicht <date>21.04.2024</date>
-          <div class="author">
-            </p>
-            <img class="photo-author" src="https://i.pravatar.cc/100" alt="avatar-person1">
-            <p>Lian</p>
-          </div>
-        </div>
-        <a class="tag">Reisen</a>
-        <h2>Die besten Reisetipps für den Sommer</h2>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores ...</p>
-        <button>Lesen</button>
-      </article>
-    </article>
-    <article class="preview-card">
-      <article class="preview-card-lifestyle">
-        <img src="https://picsum.photos/400" alt="photo of skyline">
-        <div class="date-author">
-          <p>Veröffentlicht <date>22.04.2024</date>
+      <img src="https://picsum.photos/401" alt="photo with heart drawn into a beach">
+      <div class="date-author">
+        <p>Veröffentlicht <date>21.04.2024</date>
+        <div class="author">
           </p>
-          <div class="author">
-            <img class="photo-author" src="https://i.pravatar.cc/110" alt="avatar-person1">
-            <p>Railey</p>
-          </div>
+          <img class="photo-author" src="https://i.pravatar.cc/100" alt="avatar-person1">
+          <p>Lian</p>
         </div>
-        <a class="tag">Lifestyle</a>
-        <a class="tag">Tipps</a>
-        <h2>So wird 2025 Dein Jahr</h2>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores ...</p>
-        <button>Lesen</button>
-      </article>
+      </div>
+      <a class="tag">Reisen</a>
+      <h2>Die besten Reisetipps für den Sommer</h2>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores ...</p>
+      <button>Lesen</button>
+    </article>
+    <article class="preview-card preview-card-lifestyle">
+      <img src="https://picsum.photos/400" alt="photo of skyline">
+      <div class="date-author">
+        <p>Veröffentlicht <date>22.04.2024</date>
+        </p>
+        <div class="author">
+          <img class="photo-author" src="https://i.pravatar.cc/110" alt="avatar-person1">
+          <p>Railey</p>
+        </div>
+      </div>
+      <a class="tag">Lifestyle</a>
+      <a class="tag">Tipps</a>
+      <h2>So wird 2025 Dein Jahr</h2>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores ...</p>
+      <button>Lesen</button>
     </article>
   </main>
 </body>
